@@ -167,6 +167,12 @@ dependencies {
     implementation localGroovy()
     testImplementation 'junit:junit:4.13'
 }
+// Needed when using ProjectBuilder
+tasks.withType(Test).configureEach {
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
+}
 """
 
         expect:
